# password-manager

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
src/: main.py  settings.py  validators.py
src/dialogs/: __init__.py  setup_wizard.py  unlock_dialog.py
src/models/: __init__.py  password_model.py  vault_controller.py
src/password_manager/: __main__.py  app.py
src/password_manager/config/: __init__.py  settings.py  styles.py
src/password_manager/controllers/: __init__.py  password_controller.py  vault_controller.py
src/password_manager/core/: __init__.py  totp.py  validators.py  vault.py
src/password_manager/models/: __init__.py  password_model.py  recent_vaults_model.py
src/password_manager/qml/: Main.qml
src/password_manager/qml/components/: AppDialog.qml  BrowseFileRow.qml  CopyableCell.qml  ErrorText.qml  FormField.qml  IconButton.qml  SectionHeader.qml  ShadowCard.qml  SidebarItem.qml  SidebarSection.qml  qmldir
src/password_manager/qml/views/: AboutDialog.qml  ExportDialog.qml  HeaderBar.qml  KeyboardShortcutsDialog.qml  MainView.qml  MissingVaultDialog.qml  PasswordEntryForm.qml  PasswordGeneratorDialog.qml  PasswordListPanel.qml  SecuritySettingsDialog.qml  SetupWizard.qml  Sidebar.qml  UnlockDialog.qml
src/password_manager/ui/dialogs/: __init__.py  setup_wizard.py  unlock_dialog.py
src/qml/: Main.qml  MainView.qml  SetupWizard.qml  UnlockDialog.qml
src/vault/: __init__.py  crypto.py  vault_manager.py
src/widgets/: __init__.py  entry_form.py  password_table.py
src/windows/: __init__.py  main_window.py
(+7 files in other folders)
